work through acquire_ex, add new notes

--- a/notes/notes_acquire_time-series.ipynb
+++ b/notes/notes_acquire_time-series.ipynb
@@ -83,6 +83,7 @@
     }
    ],
    "source": [
+    "# Requesting response from specific HTML (correlated server/system)\n",
     "response = requests.get('http://example.com')\n",
     "response"
    ]
@@ -163,6 +164,7 @@
     }
    ],
    "source": [
+    "# Viewing initial response as a text file, not a particularly useful format\n",
     "print(response.text)"
    ]
   },
@@ -211,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"quote\":\"If you get, give. If you learn, teach\",\"author\":\"Maya Angelou\"}'"
+       "'{\"quote\":\"Make your customers more awesome! Upgrade your user, not your product... make people better at something they want to get better at\",\"author\":\"Kathy Sierra\"}'"
       ]
      },
      "execution_count": 5,
@@ -232,7 +234,8 @@
     {
      "data": {
       "text/plain": [
-       "{'quote': 'If you get, give. If you learn, teach', 'author': 'Maya Angelou'}"
+       "{'quote': 'Make your customers more awesome! Upgrade your user, not your product... make people better at something they want to get better at',\n",
+       " 'author': 'Kathy Sierra'}"
       ]
      },
      "execution_count": 6,
@@ -241,6 +244,7 @@
     }
    ],
    "source": [
+    "# Requesting response in json format makes it both human and computer readable (gives back a dictionary in this case)\n",
     "data = response.json()\n",
     "data"
    ]
@@ -269,6 +273,7 @@
     }
    ],
    "source": [
+    "# Dtype changes between .text and .json, .json will be the most valuable moving forward\n",
     "print('response.text type is:', type(response.text))\n",
     "print('response.json() type is:', type(response.json()))"
    ]
@@ -290,7 +295,8 @@
     {
      "data": {
       "text/plain": [
-       "{'quote': 'If you get, give. If you learn, teach', 'author': 'Maya Angelou'}"
+       "{'quote': 'Make your customers more awesome! Upgrade your user, not your product... make people better at something they want to get better at',\n",
+       " 'author': 'Kathy Sierra'}"
       ]
      },
      "execution_count": 8,
@@ -311,7 +317,7 @@
     {
      "data": {
       "text/plain": [
-       "'If you get, give. If you learn, teach'"
+       "'Make your customers more awesome! Upgrade your user, not your product... make people better at something they want to get better at'"
       ]
      },
      "execution_count": 9,
@@ -332,7 +338,7 @@
     {
      "data": {
       "text/plain": [
-       "'Maya Angelou'"
+       "'Kathy Sierra'"
       ]
      },
      "execution_count": 10,
@@ -354,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "fb78f55d-9232-434e-a1dd-587ce51f9e6d",
    "metadata": {},
    "outputs": [
@@ -364,15 +370,17 @@
        "{'api': '/api/v1', 'help': '/documentation'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Requesting response from following url\n",
     "url = 'https://python.zgulde.net'\n",
     "response = requests.get(url)\n",
-    "response.json()"
+    "response.json()\n",
+    "# Returns dictionary with value keys and \"directions\" for help (next steps)"
    ]
   },
   {
@@ -404,6 +412,7 @@
     }
    ],
    "source": [
+    "# Adapting chosen url to select object stored within 'help' key value\n",
     "url = 'https://python.zgulde.net' + '/documentation'\n",
     "response = requests.get(url)\n",
     "response.json()"
@@ -427,6 +436,7 @@
     }
    ],
    "source": [
+    "# Pinpointing information required in 'payload' key value: aids readability and clarity\n",
     "response.json()['payload']"
    ]
   },
@@ -461,6 +471,7 @@
     }
    ],
    "source": [
+    "# Further clarifying format of 'payload' object\n",
     "print(response.json()['payload'])"
    ]
   },
@@ -554,6 +565,7 @@
     }
    ],
    "source": [
+    "# Inputting directions given in above cell: inputting specified endpoint to return specified result\n",
     "url = 'https://python.zgulde.net/api/v1/stores'\n",
     "response = requests.get(url)\n",
     "data = response.json()\n",
@@ -906,6 +918,7 @@
     }
    ],
    "source": [
+    "# Creating df for 'stores' key object (which is a dataframe)\n",
     "pd.DataFrame(data['payload']['stores'])"
    ]
   },
@@ -1129,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "0c791fc6-867c-4ee0-b061-a3ace409c501",
    "metadata": {},
    "outputs": [
@@ -1139,12 +1152,13 @@
        "(1, 3, '/api/v1/items?page=2', None)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Visualizing all keys within 'payload' object (for ease of navigation)\n",
     "(\n",
     "    data['payload']['page'], \n",
     "    data['payload']['max_page'], \n",
@@ -1155,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "cdd1cea9-e07c-4199-a5dc-4c9012b40b12",
    "metadata": {},
    "outputs": [
@@ -1441,12 +1455,13 @@
        "19  204040000000  204040000000  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Creating dataframe for object (dataframe) within 'items' key\n",
     "pd.DataFrame(data['payload']['items'])"
    ]
   },
@@ -1460,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "f996d754-5496-47da-b0bc-fe4729ee3e39",
    "metadata": {},
    "outputs": [],
@@ -1479,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "37b4796e",
    "metadata": {},
    "outputs": [
@@ -1608,7 +1623,7 @@
        "  'item_upc14': '204040000000'}]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1619,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "4a9fa2c8-6e03-4c3b-b7ca-802d4a5200d1",
    "metadata": {},
    "outputs": [
@@ -1629,18 +1644,27 @@
        "'/api/v1/items?page=2'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Verifying we are calling the correct page\n",
     "data['payload']['next_page']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "id": "23c67e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "c999d893-5015-4d89-b820-3a950966e645",
    "metadata": {},
    "outputs": [
@@ -1653,17 +1677,19 @@
     }
    ],
    "source": [
+    "# Creating url object of that correct page call\n",
     "url = domain + data['payload']['next_page']\n",
     "print('Next url:', url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "4de77c1e-8d5d-4ac9-a0b4-48d6f4c3c659",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# \"Extending\" (concats or adds) items df with next page of items\n",
     "response = requests.get(url)\n",
     "data = response.json()\n",
     "items.extend(data['payload']['items'])"
@@ -1671,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "b6160c8b",
    "metadata": {},
    "outputs": [
@@ -1920,18 +1946,19 @@
        "  'item_upc14': '42272008063'}]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Visualizing our updated 'items' df\n",
     "items"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "a4b03304-be44-4212-a46d-fb7a102d7f46",
    "metadata": {},
    "outputs": [
@@ -1950,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "61d322c1-aa3f-43b3-845f-ee11a8dd78dd",
    "metadata": {},
    "outputs": [],
@@ -1962,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "c7cfffc1",
    "metadata": {},
    "outputs": [
@@ -2271,7 +2298,7 @@
        "  'item_upc14': '47445919221'}]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2282,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "520973cb-3f8e-4d39-8a3b-a3ba9e779a4b",
    "metadata": {},
    "outputs": [
@@ -2301,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "69c40872-9100-424d-a81b-a71e9bcb725c",
    "metadata": {},
    "outputs": [
@@ -2947,7 +2974,7 @@
        "49   47445919221   47445919221  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2960,7 +2987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "f641504c-3025-4cdc-9a67-8a4b268ec211",
    "metadata": {},
    "outputs": [],
