add prep & explore notes, start exercises

--- a/exercises/working_with_time-series-data.ipynb
+++ b/exercises/working_with_time-series-data.ipynb
@@ -1022,6 +1022,118 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>April</th>\n",
+       "      <td>55.633056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>August</th>\n",
+       "      <td>62.405376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>December</th>\n",
+       "      <td>50.498253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>February</th>\n",
+       "      <td>52.243899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>January</th>\n",
+       "      <td>49.984140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>July</th>\n",
+       "      <td>61.765457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>June</th>\n",
+       "      <td>60.444722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>March</th>\n",
+       "      <td>53.956948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>May</th>\n",
+       "      <td>57.970968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>November</th>\n",
+       "      <td>55.185139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>October</th>\n",
+       "      <td>60.253091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>September</th>\n",
+       "      <td>62.487083</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                temp\n",
+       "month               \n",
+       "April      55.633056\n",
+       "August     62.405376\n",
+       "December   50.498253\n",
+       "February   52.243899\n",
+       "January    49.984140\n",
+       "July       61.765457\n",
+       "June       60.444722\n",
+       "March      53.956948\n",
+       "May        57.970968\n",
+       "November   55.185139\n",
+       "October    60.253091\n",
+       "September  62.487083"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "by_day.groupby('month').mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1652,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1903,7 @@
        "September  56.903333  71.306667         14.403333"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2087,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2325,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2516,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2525,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2687,7 +2799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2696,7 +2808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2705,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2893,7 +3005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2902,7 +3014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3494,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3503,7 +3615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4030,7 +4142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4070,7 +4182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4189,7 +4301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4228,7 +4340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4248,7 +4360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4755,7 +4867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
